--- a/build_simplifier_rule_2.ipynb
+++ b/build_simplifier_rule_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 3,
    "id": "cleared-explorer",
    "metadata": {},
    "outputs": [
@@ -32,73 +32,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 4,
    "id": "incorporate-outline",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "translator = CirqTranslater(3)\n",
-    "u1_layer_db = u1_layer(translator, block_id=0)\n",
-    "cnots_db = cnot_layer(translator, touching=False, block_id=1)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
-   "id": "guided-brunei",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "circuit_db = concatenate_dbs([cnots_db, cnots_db,u1_layer_db])\n",
-    "circuit, circuit_db = translator.give_circuit(circuit_db)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 173,
    "id": "liable-gibson",
    "metadata": {},
    "outputs": [],
    "source": [
-    "qubits_involved = get_qubits_involved(circuit, circuit_db)\n",
+    "def get_positional_dbs(circuit, circuit_db):\n",
     "\n",
-    "gates_on_qubit = {q:[] for q in qubits_involved}\n",
-    "on_qubit_order = {q:[] for q in qubits_involved}\n",
-    "gate_analyzed = {q:[] for q in qubits_involved}\n",
+    "    qubits_involved = get_qubits_involved(circuit, circuit_db)\n",
+    "    \n",
+    "    gates_on_qubit = {q:[] for q in qubits_involved}\n",
+    "    on_qubit_order = {q:[] for q in qubits_involved}\n",
     "\n",
-    "for order_gate, ind_gate in enumerate( circuit_db[\"ind\"]):\n",
-    "    if ind_gate < translator.n_qubits:\n",
-    "        control, target = translator.indexed_cnots[str(ind_gate)]\n",
-    "        gates_on_qubit[control].append(ind_gate)\n",
-    "        gates_on_qubit[target].append(ind_gate)\n",
-    "        on_qubit_order[control].append(order_gate)                \n",
-    "        on_qubit_order[target].append(order_gate)  \n",
-    "        gate_analyzed[control].append(False)\n",
-    "        gate_analyzed[target].append(False)\n",
-    "    else:\n",
-    "        gates_on_qubit[(ind_gate-translator.n_qubits)%translator.n_qubits].append(ind_gate)\n",
-    "        on_qubit_order[(ind_gate-translator.n_qubits)%translator.n_qubits].append(order_gate)        \n",
-    "        gate_analyzed[(ind_gate-translator.n_qubits)%translator.n_qubits].append(False)\n"
+    "    for order_gate, ind_gate in enumerate( circuit_db[\"ind\"]):\n",
+    "        if ind_gate < translator.number_of_cnots:\n",
+    "            control, target = translator.indexed_cnots[str(ind_gate)]\n",
+    "            gates_on_qubit[control].append(ind_gate)\n",
+    "            gates_on_qubit[target].append(ind_gate)\n",
+    "            on_qubit_order[control].append(order_gate)                \n",
+    "            on_qubit_order[target].append(order_gate)  \n",
+    "        else:\n",
+    "            gates_on_qubit[(ind_gate-translator.n_qubits)%translator.n_qubits].append(ind_gate)\n",
+    "            on_qubit_order[(ind_gate-translator.n_qubits)%translator.n_qubits].append(order_gate)        \n",
+    "    return gates_on_qubit, on_qubit_order"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
-   "id": "expressed-collins",
+   "execution_count": 189,
+   "id": "broken-bolivia",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ind': 0,\n",
+       " 'symbol': None,\n",
+       " 'param_value': None,\n",
+       " 'trainable': True,\n",
+       " 'block_id': 0}"
+      ]
+     },
+     "execution_count": 189,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "simplified_db = circuit_db.copy()"
+    "gate_template(0, block_id=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
-   "id": "healthy-blues",
+   "execution_count": 191,
+   "id": "positive-zimbabwe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 191,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "id": "seasonal-employment",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def rule_1(translator, simplified_db, on_qubit_order, qubit_gates_path, gate_analized):\n",
+    "def rule_1(translator, simplified_db, on_qubit_order, gates_on_qubit):\n",
     "    simplification = False\n",
     "    \n",
     "    for q, qubit_gates_path in gates_on_qubit.items():\n",
@@ -109,58 +127,39 @@
     "                control, target = translator.indexed_cnots[str(ind_gate)]\n",
     "                if (q == control) and (order_gate_on_qubit == 0):\n",
     "                    pos_gate_to_drop = on_qubit_order[q][order_gate_on_qubit]\n",
+    "                    \n",
+    "                    block_id = circuit_db.iloc[pos_gate_to_drop][\"block_id\"]\n",
+    "                    simplified_db.loc[int(pos_gate_to_drop)+0.1] = gate_template(translator.number_of_cnots + translator.n_qubits + control, param_value=0.0, block_id=circuit_db.iloc[0][\"block_id\"])\n",
+    "                    simplified_db.loc[int(pos_gate_to_drop)+0.11] = gate_template(translator.number_of_cnots + translator.n_qubits + target, param_value=0.0, block_id=circuit_db.iloc[0][\"block_id\"])\n",
+    "                    \n",
     "                    simplified_db = simplified_db.drop(labels=[pos_gate_to_drop],axis=0)\n",
-    "                    gate_analyzed[q][orded_gate_on_qubit] = True\n",
+    "                    \n",
     "                    simplification = True\n",
     "                    break\n",
-    "            else:       \n",
-    "                simplification = False\n",
-    "                gate_analyzed[q][orded_gate_on_qubit] = True\n",
-    "    simplified_db = simplified_db.reset_index(drop=True)\n",
-    "    return simplification, simplified_db\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 250,
-   "id": "competitive-modem",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "simplification, simplified_db = rule_1(translator, simplified_db, on_qubit_order, qubit_gates_path, gate_analyzed)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 262,
-   "id": "derived-worcester",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def rule_2(translator, simplified_db, on_qubit_order, qubit_gates_path, gate_analized):\n",
+    "    simplified_db = simplified_db.sort_index().reset_index(drop=True)\n",
+    "    return simplification, simplified_db\n",
+    "\n",
+    "\n",
+    "def rule_2(translator, simplified_db, on_qubit_order, gates_on_qubit):\n",
     "    simplification = False\n",
     "    \n",
     "    for q, qubit_gates_path in gates_on_qubit.items():\n",
     "        if simplification is True:\n",
     "            break\n",
     "        for order_gate_on_qubit, ind_gate in enumerate(qubit_gates_path[:-1]):\n",
+    "            \n",
     "            next_ind_gate = qubit_gates_path[order_gate_on_qubit+1]\n",
     "            if (ind_gate < translator.number_of_cnots) and (ind_gate == next_ind_gate):\n",
-    "                #next_control, next_target = translator.indexed_cnots[str(next_ind_gate)]\n",
-    "                \n",
-    "                ## up to here, I know that current gate affecting this qubit is the same than the one coming next\n",
-    "                ## but what about the other qubit ?\n",
     "                control, target = translator.indexed_cnots[str(ind_gate)]\n",
-    "\n",
     "                not_gates_in_between = False\n",
     "                this_qubit = q\n",
-    "                other_qubit = [control, target]\n",
-    "                other_qubit = other_qubit.remove(q)[0]\n",
-    "                    \n",
+    "                other_qubits = [control, target]\n",
+    "                other_qubits.remove(q)\n",
+    "                other_qubit = other_qubits[0]\n",
+    "                \n",
     "                ## now we need to check what happens in the other_qubit\n",
     "                for qord_other, ind_gate_other in enumerate(gates_on_qubit[other_qubit][:-1]):\n",
     "                    if (ind_gate_other == ind_gate) and (gates_on_qubit[other_qubit][qord_other +1] == ind_gate):\n",
-    "                        \n",
     "                        ## if we append the CNOT for q and other_q on the same call, and also for the consecutive\n",
     "                        ## note that in between there can be other calls for other qubits\n",
     "                        order_call_q = on_qubit_order[q][order_gate_on_qubit]\n",
@@ -177,76 +176,52 @@
     "                            pos_gate_to_drop = on_qubit_order[q][order_gate_on_qubit+1]\n",
     "                            simplified_db = simplified_db.drop(labels=[pos_gate_to_drop],axis=0)\n",
     "\n",
-    "                            gate_analyzed[q][orded_gate_on_qubit] = True\n",
-    "                            gate_analyzed[q][orded_gate_on_qubit+1] = True\n",
     "                            simplification = True\n",
     "                            break\n",
+    "                if simplification is True:\n",
+    "                    break\n",
     "            else:       \n",
     "                simplification = False\n",
-    "                gate_analyzed[q][orded_gate_on_qubit] = True\n",
+    "                gate_analyzed[q][order_gate_on_qubit] = True\n",
     "    simplified_db = simplified_db.reset_index(drop=True)\n",
     "    return simplification, simplified_db\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
-   "id": "manufactured-blocking",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{0: [0, 1, 3, 4, 6, 7, 8], 1: [0, 2, 3, 5, 9, 10, 11], 2: [12, 13, 14]}"
-      ]
-     },
-     "execution_count": 260,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "simplification, simplified_db = rule_1(translator, simplified_db, on_qubit_order, qubit_gates_path, gate_analyzed)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 258,
-   "id": "composed-investment",
+   "execution_count": 193,
+   "id": "mineral-johnston",
    "metadata": {},
    "outputs": [],
    "source": [
-    "l.remove(2)"
+    "translator = CirqTranslater(3)\n",
+    "db0 = pd.DataFrame([gate_template(translator.cnots_index[str([q,q+1])], block_id=0) for q in range(translator.n_qubits -1)])\n",
+    "db1 = pd.DataFrame([gate_template(translator.cnots_index[str([q,q+1])], block_id=0) for q in range(translator.n_qubits -1) for j in range(2)])\n",
+    "circuit_db = concatenate_dbs([db0, db1])\n",
+    "circuit, circuit_db = translator.give_circuit(circuit_db)\n",
+    "gates_on_qubit, on_qubit_order = get_positional_dbs(circuit, circuit_db)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
-   "id": "focal-chapter",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1]"
-      ]
-     },
-     "execution_count": 259,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "l"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "hispanic-pocket",
+   "execution_count": 194,
+   "id": "given-indian",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def apply_rule(original_circuit_db, rule, **kwargs):\n",
+    "    max_cnt = kwargs.get('max_cnt',10)\n",
+    "    simplified, cnt = True, 0\n",
+    "    original_circuit, original_circuit_db = translator.give_circuit(original_circuit_db)\n",
+    "    gates_on_qubit, on_qubit_order = get_positional_dbs(original_circuit, original_circuit_db)\n",
+    "    simplified_db = original_circuit_db.copy()\n",
+    "    while simplified and cnt < max_cnt:\n",
+    "        simplified, simplified_circuit_db = rule(translator, simplified_db, on_qubit_order, gates_on_qubit)\n",
+    "        circuit, simplified_db = translator.give_circuit(simplified_circuit_db)\n",
+    "        gates_on_qubit, on_qubit_order = get_positional_dbs(circuit, simplified_db)\n",
+    "        cnt+=1\n",
+    "    return cnt, simplified_db"
+   ]
   }
  ],
  "metadata": {
