--- a/build_simplifier_rule_3.ipynb
+++ b/build_simplifier_rule_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "cleared-explorer",
    "metadata": {},
    "outputs": [
@@ -26,21 +26,13 @@
     "from utilities.circuit_database import CirqTranslater\n",
     "from utilities.templates import *\n",
     "from utilities.variational import Minimizer\n",
-    "from utilities.misc import get_qubits_involved\n",
+    "from utilities.misc import get_qubits_involved, reindex_symbol\n",
     "import matplotlib.pyplot as plt \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "incorporate-outline",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 5,
    "id": "liable-gibson",
    "metadata": {},
    "outputs": [],
@@ -67,52 +59,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
-   "id": "broken-bolivia",
+   "execution_count": null,
+   "id": "worst-pillow",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'ind': 0,\n",
-       " 'symbol': None,\n",
-       " 'param_value': None,\n",
-       " 'trainable': True,\n",
-       " 'block_id': 0}"
-      ]
-     },
-     "execution_count": 189,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gate_template(0, block_id=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 191,
-   "id": "positive-zimbabwe",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 191,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
-   "id": "seasonal-employment",
+   "execution_count": 9,
+   "id": "talented-modification",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,31 +140,10 @@
     "                simplification = False\n",
     "                gate_analyzed[q][order_gate_on_qubit] = True\n",
     "    simplified_db = simplified_db.reset_index(drop=True)\n",
-    "    return simplification, simplified_db\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 193,
-   "id": "mineral-johnston",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "translator = CirqTranslater(3)\n",
-    "db0 = pd.DataFrame([gate_template(translator.cnots_index[str([q,q+1])], block_id=0) for q in range(translator.n_qubits -1)])\n",
-    "db1 = pd.DataFrame([gate_template(translator.cnots_index[str([q,q+1])], block_id=0) for q in range(translator.n_qubits -1) for j in range(2)])\n",
-    "circuit_db = concatenate_dbs([db0, db1])\n",
-    "circuit, circuit_db = translator.give_circuit(circuit_db)\n",
-    "gates_on_qubit, on_qubit_order = get_positional_dbs(circuit, circuit_db)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 194,
-   "id": "given-indian",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return simplification, simplified_db\n",
+    "\n",
+    "\n",
+    "\n",
     "def apply_rule(original_circuit_db, rule, **kwargs):\n",
     "    max_cnt = kwargs.get('max_cnt',10)\n",
     "    simplified, cnt = True, 0\n",
@@ -222,6 +157,136 @@
     "        cnt+=1\n",
     "    return cnt, simplified_db"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "indian-lying",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "translator = CirqTranslater(3)\n",
+    "db0 = pd.DataFrame([gate_template(translator.cnots_index[str([q,q+1])], block_id=0) for q in range(translator.n_qubits -1)])\n",
+    "db1 = pd.DataFrame([gate_template(translator.cnots_index[str([q,q+1])], block_id=0) for q in range(translator.n_qubits -1) for j in range(2)])\n",
+    "circuit_db = concatenate_dbs([db0, db1])\n",
+    "circuit, circuit_db = translator.give_circuit(circuit_db)\n",
+    "gates_on_qubit, on_qubit_order = get_positional_dbs(circuit, circuit_db)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "geological-limitation",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    None\n",
+       "1    None\n",
+       "2    None\n",
+       "3    None\n",
+       "4    None\n",
+       "5    None\n",
+       "Name: symbol, dtype: object"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "circuit_db[\"symbol\"]."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "grand-nicholas",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "id": "recreational-hostel",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cnts, simplified_db = apply_rule(circuit_db, rule_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
+   "id": "powered-heritage",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "circuit, circuit_db = translator.give_circuit(simplified_db)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "id": "incoming-maine",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cnts, simplified_db = apply_rule(circuit_db, rule_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "id": "adjustable-cookie",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "circuit, circuit_db = translator.give_circuit(simplified_db)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "id": "private-pocket",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"overflow: auto; white-space: pre;\">(0, 0): ───Rx(0)───────\n",
+       "\n",
+       "(0, 1): ───Rx(0)───@───\n",
+       "                   │\n",
+       "(0, 2): ───────────X───</pre>"
+      ],
+      "text/plain": [
+       "(0, 0): ───Rx(0)───────\n",
+       "\n",
+       "(0, 1): ───Rx(0)───@───\n",
+       "                   │\n",
+       "(0, 2): ───────────X───"
+      ]
+     },
+     "execution_count": 204,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "circuit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "neural-stamp",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
