--- a/testing/optimizer_vqe_tester_TFIM3.ipynb
+++ b/testing/optimizer_vqe_tester_TFIM3.ipynb
@@ -52,26 +52,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "split-decision",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "symbols = translator.get_symbols(circuit_db)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "unavailable-cartridge",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cost, resolver, training_history = minimizer.minimize([circuit], symbols)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "id": "animal-discussion",
    "metadata": {},
@@ -88,6 +68,8 @@
     }
    ],
    "source": [
+    "symbols = translator.get_symbols(circuit_db)\n",
+    "cost, resolver, training_history = minimizer.minimize([circuit], symbols)\n",
     "minimizer.lower_bound_cost"
    ]
   },
