will change the v compiling

--- a/compiling.ipynb
+++ b/compiling.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "cleared-explorer",
    "metadata": {},
    "outputs": [],
@@ -28,12 +28,13 @@
     "from utilities.misc import get_qubits_involved, reindex_symbol, shift_symbols_down\n",
     "import matplotlib.pyplot as plt \n",
     "import tensorflow_quantum as tfq\n",
-    "import cirq"
+    "import cirq\n",
+    "from utilities.compiling import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "provincial-convention",
    "metadata": {},
    "outputs": [],
@@ -43,30 +44,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "right-fluid",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from utilities.compiling import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "elder-gravity",
    "metadata": {},
    "outputs": [],
    "source": [
     "u1ss = u1_db(translator, 1, params=True)\n",
     "v_to_compile_db = concatenate_dbs([u1ss]*2) ###target gates to compile\n",
+    "\n",
     "compile_circuit, compile_circuit_db = construct_compiling_circuit(translator, conjugate_db(translator, v_to_compile_db))\n",
+    "#compile_circuit, compile_circuit_db = construct_compiling_circuit(translator, v_to_compile_db)\n",
     "minimizer = Minimizer(translator, mode=\"compiling\", hamiltonian=\"Z\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "important-terry",
    "metadata": {},
    "outputs": [],
@@ -76,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "activated-concert",
    "metadata": {},
    "outputs": [],
@@ -88,63 +81,194 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "moved-amateur",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "target_qubit = 1\n",
-    "resu_db[\"ind\"] = resu_db[\"ind\"] + target_qubit"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "detailed-cleanup",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_db_to_compile(simplified_db):"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "recent-cookie",
+   "execution_count": 6,
+   "id": "lined-myanmar",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    3\n",
-       "1    5\n",
-       "2    3\n",
-       "Name: ind, dtype: int64"
+       "array([[-0.99793825-0.0630622j , -0.00206127+0.01175395j],\n",
+       "       [ 0.00206127+0.01175395j, -0.99793825+0.0630622j ]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "resu_db[\"ind\"]"
+    "resu_comp.unitary()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 12,
+   "id": "forbidden-formula",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c, cdb = translator.give_circuit(v_to_compile_db, unresolved=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "certain-turner",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.53686448-0.84345089j, -0.01354644-0.01355059j],\n",
+       "       [ 0.01354644-0.01355059j, -0.53686448+0.84345089j]])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.unitary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "limiting-circus",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.53700181+0.84357491j, -0.00305361-0.0010441j ],\n",
+       "       [ 0.00305361-0.0010441j , -0.53700181-0.84357491j]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resu_comp.unitary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "modern-exception",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conj = conjugate_db(translator, v_to_compile_db)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "noted-brisbane",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cc, ccdb = translator.give_circuit(conj, unresolved=False)\n",
+    "co, codb = translator.give_circuit(v_to_compile_db, unresolved=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "identical-implementation",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "careful-lighter",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.53686448-0.84345089j, -0.01354644-0.01355059j],\n",
+       "       [ 0.01354644-0.01355059j, -0.53686448+0.84345089j]])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "co.unitary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "informational-flooring",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.53686448-0.84345089j, -0.01354644-0.01355059j],\n",
+       "       [ 0.01354644-0.01355059j, -0.53686448+0.84345089j]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cc.unitary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "answering-tolerance",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "acute-picnic",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "charitable-genetics",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-0.92190928-0.37067902j,  0.07866673+0.08057229j],\n",
-       "       [-0.07866673+0.08057229j, -0.92190928+0.37067902j]])"
+       "array([[-0.53700181+0.84357491j, -0.00305361-0.0010441j ],\n",
+       "       [ 0.00305361-0.0010441j , -0.53700181-0.84357491j]])"
       ]
      },
-     "execution_count": 310,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,8 +281,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "cordless-paper",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.53686448-0.84345089j, -0.01354644-0.01355059j],\n",
+       "       [ 0.01354644-0.01355059j, -0.53686448+0.84345089j]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "compiling_circuit.unitary()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "strategic-revolution",
+   "id": "dried-thing",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for ind, gate_id in conjugate_v_to_compile.iterrows():\n",
+    "    if translator.number_of_cnots <= gate_id[\"ind\"] <= translator.number_of_cnots + 3*translator.n_qubits:\n",
+    "        mcof = [-1,-1,1][(gate_id[\"ind\"]-translator.number_of_cnots)//translator.n_qubits] ###this conjugates paulis  rz, rx, ry"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "original-cancellation",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "induced-grill",
    "metadata": {},
    "outputs": [],
    "source": []
