--- a/compiling.ipynb
+++ b/compiling.ipynb
@@ -10,10 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 48,
    "id": "cleared-explorer",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -34,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 49,
    "id": "provincial-convention",
    "metadata": {},
    "outputs": [],
@@ -44,121 +53,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 50,
    "id": "elder-gravity",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "u1ss = u1_db(translator, 1, params=True)\n",
-    "v_to_compile_db = concatenate_dbs([u1ss]*2) ###target gates to compile\n",
-    "\n",
-    "compile_circuit, compile_circuit_db = construct_compiling_circuit(translator, conjugate_db(translator, v_to_compile_db))\n",
-    "#compile_circuit, compile_circuit_db = construct_compiling_circuit(translator, v_to_compile_db)\n",
-    "minimizer = Minimizer(translator, mode=\"compiling\", hamiltonian=\"Z\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 51,
    "id": "important-terry",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cost, resolver, history = minimizer.minimize([compile_circuit], symbols=translator.get_symbols(compile_circuit_db))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "activated-concert",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "u1ss = u1_db(translator, 0, params=True)\n",
+    "u_to_compile_db = concatenate_dbs([u1ss]*2) ###target gates to compile\n",
+    "u_to_compile_db[\"trainable\"] = False\n",
+    "\n",
+    "compile_circuit, compile_circuit_db = construct_compiling_circuit(translator, u_to_compile_db)\n",
+    "minimizer = Minimizer(translator, mode=\"compiling\", hamiltonian=\"Z\")\n",
+    "\n",
+    "\n",
+    "cost, resolver, history = minimizer.minimize([compile_circuit], symbols=translator.get_symbols(compile_circuit_db))\n",
+    "\n",
+    "\n",
     "u1s = u1_db(translator, 0, params=True)\n",
-    "u1s[\"param_value\"] = list(resolver.values())\n",
-    "resu_comp, resu_db = translator.give_circuit(u1s,unresolved=False)"
+    "u1s[\"param_value\"] = -np.array(list(resolver.values()))\n",
+    "resu_comp, resu_db = translator.give_circuit(u1s,unresolved=False)\n",
+    "\n",
+    "cc, cdb = translator.give_circuit(u_to_compile_db, unresolved=False)\n",
+    "c = cc.unitary()\n",
+    "r = resu_comp.unitary()\n",
+    "\n",
+    "## phase_shift if necessary\n",
+    "if np.abs(np.mean(c/r) -1) > 1:\n",
+    "    u1s.loc[0] = u1s.loc[0].replace(to_replace=u1s[\"param_value\"][0], value=u1s[\"param_value\"][0] + np.pi)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "lined-myanmar",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-0.99793825-0.0630622j , -0.00206127+0.01175395j],\n",
-       "       [ 0.00206127+0.01175395j, -0.99793825+0.0630622j ]])"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "resu_comp.unitary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "forbidden-formula",
+   "execution_count": 55,
+   "id": "second-cleveland",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "c, cdb = translator.give_circuit(v_to_compile_db, unresolved=False)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "certain-turner",
+   "execution_count": null,
+   "id": "conservative-suspension",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-0.53686448-0.84345089j, -0.01354644-0.01355059j],\n",
-       "       [ 0.01354644-0.01355059j, -0.53686448+0.84345089j]])"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "c.unitary()"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "limiting-circus",
+   "execution_count": null,
+   "id": "bibliographic-result",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-0.53700181+0.84357491j, -0.00305361-0.0010441j ],\n",
-       "       [ 0.00305361-0.0010441j , -0.53700181-0.84357491j]])"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "resu_comp.unitary()"
-   ]
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "banned-royalty",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "hollow-mechanism",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "multiple-territory",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "modern-exception",
+   "id": "blank-investigation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "noted-brisbane",
+   "id": "perceived-thong",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "identical-implementation",
+   "id": "independent-amplifier",
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "careful-lighter",
+   "id": "subsequent-robinson",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "informational-flooring",
+   "id": "found-graphic",
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "answering-tolerance",
+   "id": "increasing-christmas",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -250,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acute-picnic",
+   "id": "organic-differential",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -282,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "cordless-paper",
+   "id": "better-dream",
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dried-thing",
+   "id": "foreign-detective",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "original-cancellation",
+   "id": "theoretical-suspension",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -324,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "induced-grill",
+   "id": "married-injury",
    "metadata": {},
    "outputs": [],
    "source": []
